Added unit tests

--- a/ProjectEulerSolutions/Views/Shared/Answer.cshtml
+++ b/ProjectEulerSolutions/Views/Shared/Answer.cshtml
@@ -11,7 +11,7 @@
 
 <iframe width="600" height="500" src="@url"></iframe>
 
-<p>@Model.Message @Model.Value</p>
+<p>@Model.Message @Model.Value @Model.StrValue</p>
 
 <p><a href="@questionUrl">Go back</a> to question.</p>
 <p><a href="@homeUrl">Go back</a> to set.</p>
